# this-is-the-way

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
sandbox/: Dockerfile.sandbox  runner.py
sandbox/maps/: nevarro_sewers.json
src/config/: settings.py
src/core/: admin.py  models.py  urls.py  views.py
src/core/management/commands/: load_maps.py
src/core/migrations/: 0001_initial.py
src/core/services/: algorithms.py  armorer.py  environments.py  vault.py
src/static/css/: hud.css
src/static/js/: simulation.js
src/templates/: base.html
src/templates/core/: hud.html
